# Lord-of-Vikings

./: .gitignore  CMakeLists.txt  README.md  build.sh  shader.vert
assets/shaders/: shader.frag  shader.vert
src/: GlModel.cpp  GlModel.h  main.cpp
src/legacy/: Camera.cpp  Camera.h  Entity.cpp  Entity.h
src/util/: ProjectionMatrix.h  Shader.cpp  Shader.h
